# smartpy

./: .coveragerc  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .rtd-environment.yml  .ruff.toml  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
smart/: IGM.py  __init__.py  differential_rotation.py  map_processing.py
smart/characterization/: dB_dt.py
smart/segmentation/: indexed_grown_mask.py
smart/tests/: test_functions.py  test_map_processing.py
