[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "smart"
description = "SolarMonitor Active Regtion Tracking (SMART)"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
dependencies = [
  "numpy",
  "sunpy",
  "scikit-image",
  "matplotlib"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "pydata-sphinx-theme",
]

dev = ["smart[tests,docs]"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["smart._dev*"]

[tool.setuptools_scm]
write_to = "smart/_version.py"

[tool.mypy]
python_version = "3.9"
